add form with form validation+error page

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,9 @@ body{
 .header-height {
   height: calc(100vh - 82px);
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
