--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,6 +10,10 @@ body{
   height: calc(100vh - 82px);
 }
 
+.black-gradient{
+  background-image: linear-gradient(270deg, #000000 28%, #00000029 100%)
+}
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
